App finished, and updates

--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -10,11 +10,11 @@
     --font-title: 'Bebas Neue', cursive;
     --font-text:  'Roboto', sans-serif;
 
-    --font-title-color: #BFA38A;
+    --font-title-color: #BF4904;
 
     --button-bg-color: #BF4904;
 
-    --button-hover-bg-color: #BF4904;
+    --button-hover-bg-color: #732002;
 
     --input-bg-color: #F28627;
 
